# AIPersonalAgent

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/agent/: workflow.py
app/api/: routes.py
app/memory/: store.py
app/models/: schemas.py
app/tools/: __init__.py  email_sender.py  interfaces.py  pdf_reader.py  summarizer.py
tests/: test_step1_step2_consistency.py  test_tools_step2.py
