[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-personal-agent"
version = "0.1.0"
description = "Autonomous task agent for PDF summarization and email workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.0",

]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100

target-version = "py310"
